12/2: The final exam will be on Thursday from 8:30-10:30am in our normal classroom.  You may bring a calculator and TWO sheets of notes.  It will be half old stuff and half new stuff (energy, thermodynamics, fluids).  
#11/29: There will be a quiz tomorrow morning; it will only cover fluids.
11/14: The next homework assignment is now available.  It is due next Tuesday at 11:59pm.  There will be no homework assigned next week over the Thanksgiving break.
11/12: There will be a new homework posted for next week, but I have been delayed in posting it.  It will be up by Monday at the latest, and I will give you until the following Monday at noon to finish it.
11/8: The [Exam2Outline.pdf outline] and [SampleExam2.pdf sample exam questions] for Exam 2 are now online; the [SampleExam2S.pdf solutions] <B>are now available</B>.  The exam is actually a combination of two different exams (with some problems removed), which is why it's repetitive; I didn't think you'd mind.
11/7: There is <b>no</b> lab (PHYS103) this week, for anyone.
11/5: Here are the [Energy.pdf energy worksheets] that we have been working through in class, along with the [EnergySolutions.pdf solutions].  (Please don't refer to the solutions until after you've worked through the problem.) <B>Update 11/7:</B> There was an error in the solution to the last problem; it has been fixed.  (The answer is 4m, not 0.4m.)
11/2: Exam 2 will be on <B>Monday, November 14th</B> and will cover torque, equilibrium, angular kinematics, and momentum.  Review outlines to come by this weekend.