@@ -75,6 +75,9 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+<DIV class="updated">Posted 12/4:</DIV>
+ The <A HREF="Repository/outline">Exam3Outline.pdf</A> for the new stuff on the Final Exam is now available.  A sample exam is coming soon (today or Monday morning).
+<li>
 <DIV class="updated">Posted 12/2:</DIV>
  The final exam will be on Thursday from 8:30-10:30am in our normal classroom.  You may bring a calculator and TWO sheets of notes.  It will be half old stuff and half new stuff (energy, thermodynamics, fluids).  
 <li>
@@ -410,5 +413,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TR><TD>Exam 1:<TD><A HREF="Repository/Exam1Outline.pdf">Exam Outline</A><TD><A HREF="Repository/SampleExam1.pdf">Sample Exam</A><BR><A HREF="Repository/SampleExam1S.pdf">(solutions)</A><TD><A HREF="Repository/Exam1.pdf">Exam</A><BR><A HREF="Repository/Exam1S.pdf">(solutions)</A>
 
 <TR><TD>Exam 2:<TD><A HREF="Repository/Exam2Outline.pdf">Exam Outline</A><TD><A HREF="Repository/SampleExam2.pdf">Sample Exam</A><BR><A HREF="Repository/SampleExam2S.pdf">(solutions)</A><TD><A HREF="Repository/Exam2.pdf">Exam</A><BR><A HREF="Repository/Exam2S.pdf">(solutions)</A>
+
+<TR><TD>Exam 3:<TD><A HREF="Repository/Exam3Outline.pdf">Exam Outline</A><TD><BR><TD><BR>
 
 </TABLE></DIV></div></div>
