@@ -1,3 +1,4 @@
+12/4: The [outline Exam3Outline.pdf] for the new stuff on the Final Exam is now available.  A sample exam is coming soon (today or Monday morning).
 12/2: The final exam will be on Thursday from 8:30-10:30am in our normal classroom.  You may bring a calculator and TWO sheets of notes.  It will be half old stuff and half new stuff (energy, thermodynamics, fluids).  
 #11/29: There will be a quiz tomorrow morning; it will only cover fluids.
 11/14: The next homework assignment is now available.  It is due next Tuesday at 11:59pm.  There will be no homework assigned next week over the Thanksgiving break.
